--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,12 +18,18 @@ services:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: 1234
             POSTGRES_DB: apidb
+        volumes:
+            - postgres:/var/lib/postgresql/data
     redis:
         container_name: "redis"
         image: redis
         ports:
           - "6379:6379"
         volumes:
-          - ../data/redis:/data
+          - redis:/data
         entrypoint: redis-server --appendonly yes
         restart: always
+
+volumes:
+    postgres: {}
+    redis: {}
