--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
             dockerfile: Dockerfile
         environment:
            DATABASE_HOST: dbPostgres
+           REDIS_HOST: redis
         depends_on:
             - dbPostgres
         ports:
